tests/baselines/reference/logicalOrExpressionIsContextuallyTyped.errors.txt
tests/cases/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrExpressionIsContextuallyTyped.ts(6,33): error TS2322: Type '{ a: 文字; b: 数字; } | { a: 文字; b: 真假; }' is not assignable to type '{ a: 文字; }'.
  Type '{ a: 文字; b: 数字; }' is not assignable to type '{ a: 文字; }'.
    Object literal may only specify known properties, and 'b' does not exist in type '{ a: 文字; }'.


==== tests/cases/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrExpressionIsContextuallyTyped.ts (1 errors) ====
    // The || operator permits the operands to be of any type.
    // If the || expression is contextually typed, the operands are contextually typed by the
    // same type and the result is of the best common type of the contextual type and the two
    // operand types.
    
    var r: { a: string } = { a: '', b: 123 } || { a: '', b: true };
                                    ~~~~~~
!!! error TS2322: Type '{ a: 文字; b: 数字; } | { a: 文字; b: 真假; }' is not assignable to type '{ a: 文字; }'.
!!! error TS2322:   Type '{ a: 文字; b: 数字; }' is not assignable to type '{ a: 文字; }'.
!!! error TS2322:     Object literal may only specify known properties, and 'b' does not exist in type '{ a: 文字; }'.